# work-step-time-prediction

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  conftest.py  docker-compose.yml  err.txt  pyproject.toml  refactor_predict.py  requirements.txt  test_output.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py  predictor.py  schemas.py
app/routers/: __init__.py  health.py  model_info.py  predict.py
code/: eda_phase1.py  model_optimise.py  model_oversample.py  model_oversample_recall.py  model_phase2.py  predict.py
combined_best/code/: model_best_per_target_reg.py  model_combined_best.py  model_true_optimal.py
combined_best/markdowns/: best_per_target_reg_results.md  combined_best_results.md
docs/: pr_summary.md  project_evolution.md  release_package.md
docs/markdowns/: api_contract.md  classifier_accuracy.md  classifier_selection.md  monitoring_snapshot.md  ngrams_explained.md  (+6 more)
gbert_base/: README.md
markdowns/: README.md  assessment_writeup.md  logreg_classifier_metrics.md  model_summary.md  ngramme_erklaerung.md  oversample_recall_results.md  production_roadmap.md  regressionsmodell_auswahl.md  regressor_selection.md  rule_baseline_explainer.md
model_plots/: ensemble_vs_individual.csv  logreg_clf_metrics.csv  oversampling_metrics.csv
models/: promotion_report.md
scripts/: eda.py  generate_synthetic_data.py  monitoring_report.py  predict.py  promote.py  train.py
tests/: README.md  test_api.py  test_functional.py  test_lifecycle.py  test_smoke.py  test_unit.py
text/: README.md
(+28 files in other folders)
