[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repair-order"
version = "2.0.0"
description = "Multi-target work step time prediction pipeline for automotive body-shop work steps"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.optional-dependencies]
gbert = [
    "torch>=2.0",
    "transformers>=4.38",
    "sentence-transformers>=2.7",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "W291", "W293"]
